--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 
     <properties>
         <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
-        <kotlin.version>1.3.50</kotlin.version>
+        <kotlin.version>1.4.32</kotlin.version>
         <junit.version>4.12</junit.version>
         <javafx.version>11.0.1</javafx.version>
     </properties>
@@ -405,6 +405,16 @@
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core</artifactId>
             <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-serialization-core</artifactId>
+            <version>1.0.0-RC</version>
+        </dependency>
+        <dependency>
+            <groupId>khttp</groupId>
+            <artifactId>khttp</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
